--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,7 +1,6 @@
-astroid==2.3.3
-isort==4.3.21
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-pylint==2.4.4
-six==1.14.0
-wrapt==1.11.2
+click==7.1.1
+Flask==1.1.2
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+Werkzeug==1.0.1
